test/type/fail/non_callable_expr.j
class A {
  Void main() {
    (1 + 2)();
    return;
  }
}
